WestpacClient.java: Bug fix and performance enhancement
JvmDiagnosticsLogger.java: print diagnostic log once every 3 minutes unless there is any warning. This can explain why K8s Pod becomes unresponsive, i.e., failing liveness and readiness probes without OOMKill